src/components/dialog/dialog.scss
@import "@lime-material/theme/mdc-theme";
@import "@lime-material/typography/mdc-typography";
@import "@lime-material/dialog/mdc-dialog";

slot[name="header"] {
    display: none;
}

.mdc-dialog__surface {
    max-height: 95vh;
    width: 70rem;

    .mdc-dialog__body--scrollable  {
        max-height: inherit;
        border: 0;
        overflow: auto;
    }
}

